Version 1.1.2 - April 05 2009 * Added ability to change content when ColorBox is already open. * Added vertical photo centering now works for all browsers (this feature previously excluded IE6&7). * Added namespacing to the esc-key keydown event for people who want to disable it: "keydown.colorClose" * Added 'title' setting to add the ability to set an alternative title for any ColorBox call. * Fixed rollover navigation issue with IE8. (Added JS-based rollover state due to a browser-bug.) * Fixed an overflow issue for when the fixed width/height is smaller than the size of a photo. * Fixed a bug in the fade transition where the border would still come up if ColorBox was   closed mid-transition. * Removed 'overflow:visible' from #modalContent. * Switch from JSMin to Yui Compressor for minification.  Minified code now under 7KB.

--- a/colorbox/colorbox.css
+++ b/colorbox/colorbox.css
@@ -9,8 +9,8 @@
 			#modalClose, #contentPrevious, #contentNext{outline:none; cursor:pointer; border:0; margin:0;}
 			#modalLoadedContent{overflow:auto; width:0; height:0;}
 			#modalLoadedContent iframe{display:block; width:100%; height:100%; border:0;}
-			#modalLoadedContent img#modalPhoto{display:block; border:0; margin:auto;}
-			#modalLoadedContent embed{display:block; border:0;}/* Display:block removes the line-height gap underneath images, iframes, and embedded content */
+                        #modalPhoto{cursor:pointer;}
+			#modalLoadedContent embed{display:block; border:0;}/* Display:block removes the line-height gap embedded content */
 			#modalLoadingOverlay{position:absolute; width:100%; height:100%; top:0; left:0;}
 
 
