--- a/example3/colorbox-custom.css
+++ b/example3/colorbox-custom.css
@@ -7,13 +7,13 @@
 
 #colorbox{}
 	#modalContent{background:#000; margin-top:20px;}
-		#modalLoadedContent{background:#000; padding:10px;}
+		#modalLoadedContent{background:#000; border:10px solid #000;}
 			#contentTitle{position:absolute; top:-20px; left:0; color:#fff;}
 			#contentCurrent{display:none;}
 			#contentPrevious{position:absolute; top:50%; left:10px; margin-top:-41px; background:url(images/controls.png) top left no-repeat; width:38px; height:81px; text-indent:-9999px;}
-			#contentPrevious:hover{background-position:bottom left;}
+			#contentPrevious:hover, #contentPrevious.hover{background-position:bottom left;}
 			#contentNext{position:absolute; top:50%; right:10px; margin-top:-41px; background:url(images/controls.png) top right no-repeat; width:38px; height:81px; text-indent:-9999px;}
-			#contentNext:hover{background-position:bottom right;}
+			#contentNext:hover, #contentNext.hover{background-position:bottom right;}
 		#modalLoadingOverlay{background:url(images/loading.gif) center center no-repeat #000;}
 		#modalClose{position:absolute; top:10px; right:10px; display:block; background:url(images/controls.png) top center no-repeat; width:47px; height:24px; text-indent:-9999px;}
-		#modalClose:hover{background-position:bottom center;}
+		#modalClose:hover, #modalClose.hover{background-position:bottom center;}
